--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 		<div id="root"></div>
 		<!-- if development -->
 		<script type="module">
-			import RefreshRuntime from 'http://localhost:3000/@react-refresh';
+			import RefreshRuntime from 'http://localhost:3030/@react-refresh';
 			RefreshRuntime.injectIntoGlobalHook(window);
 			window.$RefreshReg$ = () => {};
 			window.$RefreshSig$ = () => (type) => type;
 			window.__vite_plugin_react_preamble_installed__ = true;
 		</script>
-		<script type="module" src="http://localhost:3000/@vite/client"></script>
-		<script type="module" src="http://localhost:3000/main.js"></script>
-
-		<script type="module" src="/src/main.jsx"></script>
+		<script type="module" src="http://localhost:3030/@vite/client"></script>
+		<script type="module" src="http://localhost:3030/index.jsx"></script>
+		<!-- if production -->
+		<script type="module" src="/src/index.jsx"></script>
 	</body>
 </html>
