--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="root"></div>
 		<!-- if development -->
-		<script type="module">
+		<!-- <script type="module">
 			import RefreshRuntime from 'http://localhost:3030/@react-refresh';
 			RefreshRuntime.injectIntoGlobalHook(window);
 			window.$RefreshReg$ = () => {};
@@ -18,7 +18,7 @@
 			window.__vite_plugin_react_preamble_installed__ = true;
 		</script>
 		<script type="module" src="http://localhost:3030/@vite/client"></script>
-		<script type="module" src="http://localhost:3030/index.jsx"></script>
+		<script type="module" src="http://localhost:3030/index.jsx"></script> -->
 		<!-- if production -->
 		<script type="module" src="/src/index.jsx"></script>
 	</body>
